--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.19.4",
+    "@google/generative-ai": "^0.24.1",
+    "@langchain/community": "^0.3.44",
+    "@langchain/core": "^0.3.57",
     "@radix-ui/react-slot": "^1.2.2",
     "@uploadthing/react": "^7.3.1",
     "class-variance-authority": "^0.7.1",
@@ -17,6 +20,8 @@
     "lucide-react": "^0.510.0",
     "next": "15.3.2",
     "next-themes": "^0.4.6",
+    "openai": "^4.103.0",
+    "pdf-parse": "^1.1.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "sonner": "^2.0.3",
