feat: connect to db, be able to upload summary

--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@clerk/nextjs": "^6.19.4",
+    "@clerk/nextjs": "^6.28.1",
     "@google/generative-ai": "^0.24.1",
     "@langchain/community": "^0.3.44",
     "@langchain/core": "^0.3.57",
-    "@radix-ui/react-slot": "^1.2.2",
+    "@neondatabase/serverless": "^1.0.1",
+    "@radix-ui/react-slot": "^1.2.3",
     "@uploadthing/react": "^7.3.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
