--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "sonner": "^2.0.3",
+    "strip": "^3.0.0",
+    "stripe": "^18.4.0",
     "tailwind-merge": "^3.3.0",
     "uploadthing": "^7.7.2",
     "zod": "^3.24.4"
