--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "lucide-react": "^0.510.0",
+    "motion": "^12.23.12",
     "next": "15.3.2",
     "next-themes": "^0.4.6",
     "openai": "^4.103.0",
